[package]
name = "console_game"
version = "0.1.0"
edition = "2021"

[dependencies]
gl="0.14.0"
rand = "0.8.5"
rusttype = "0.9.2"

[target.'cfg(not(windows))'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[target.'cfg(windows)'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
